--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fs": "^0.0.1-security",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-kakao-maps-sdk": "^1.1.27",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
